Polish add account and add steps to nav, fix account open alignment

--- a/dash/index.styl
+++ b/dash/index.styl
@@ -116,7 +116,7 @@ div
         background var(--ghostC)
 
     .accountTypeSelect
-      height 70px
+      height 90px
       // width 320px
       font-weight 300
       border-radius 12px
@@ -129,6 +129,9 @@ div
       // border-bottom 2px solid var(--ghostZ)
       box-shadow 0px 4px 8px var(--ghostY)
       font-size 16px
+
+      .accountTypeSelectIcon
+        margin-right 12px
 
     .accountTypeSelect:hover
       //transform translateY(-1px)
